# ocr-llm-validator

./: .gitignore  constant.py  dynamic_section_api.py  keyword_extracter.py  logging_config.py  main.py  pyproject.toml  requirements.txt  test.py  text_extraction_with_docling.py
